--- a/tomcat.yml
+++ b/tomcat.yml
@@ -1,23 +1,23 @@
-- hosts: test
-
+- hosts: all
   tasks:
     - name: download tomcat from dlcdn
       get_url:
-        url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.83/bin/apache-tomcat-9.0.83.tar.gz"
+        url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.88/bin/apache-tomcat-9.0.88.tar.gz"
         dest: "/root/"
 
     - name: untar the apache file
-      command: tar -zxvf apache-tomcat-9.0.83.tar.gz
-        #unarchive:
-        #src: "apache-tomcat-9.0.83.tar.gz"
-        #dest: "/root/"
+      command: tar -zxvf apache-tomcat-9.0.88.tar.gz
+
 
     - name: rename the tomcat
-      command: mv apache-tomcat-9.0.83 tomcat
+      command: mv apache-tomcat-9.0.88 tomcat
       tags: abc
 
+    - name: update
+      command: sudo apt update -y
+
     - name: install java
-      command: yum install java-1.8.0-openjdk -y
+      command: sudo apt install default-jdk -y
 
     - name: setting the roles in tomcat-user.xml file
       template:
